RESOLVED FIXED83862
[EFL] Fix wrong parameter order in function call for EWebLauncher
https://bugs.webkit.org/show_bug.cgi?id=83862
Summary [EFL] Fix wrong parameter order in function call for EWebLauncher
Seokju Kwon
Reported 2012-04-12 23:12:18 PDT
EWebLauncher creates multiple windows, like multiple tabs when pressing F9 key. But it doesn't work properly because of wrong parameter order in function call.
Attachments
Patch (1.65 KB, patch)
2012-04-12 23:59 PDT, Seokju Kwon
no flags
Seokju Kwon
Comment 1 2012-04-12 23:59:30 PDT
Gyuyoung Kim
Comment 2 2012-04-13 02:20:57 PDT
Comment on attachment 137045 [details] Patch LGTM.
Raphael Kubo da Costa (:rakuco)
Comment 3 2012-04-13 08:23:11 PDT
Comment on attachment 137045 [details] Patch Makes sense.
WebKit Review Bot
Comment 4 2012-04-16 04:20:44 PDT
Comment on attachment 137045 [details] Patch Clearing flags on attachment: 137045 Committed r114238: <http://trac.webkit.org/changeset/114238>
WebKit Review Bot
Comment 5 2012-04-16 04:20:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.